syntax = "proto3";

package bfg.proto;

enum CompassDirection {
  WEST        = 0;
  NORTH_WEST  = 1;
  NORTH       = 2;
  NORTH_EAST  = 3;
  EAST        = 4;
  SOUTH_EAST  = 5;
  SOUTH       = 6;
  SOUTH_WEST  = 7;
}
